Nuevo cambios en nav

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,18 @@
-<p>user works!</p>
+<div>
+    <h1>USER</h1>
+</div>
+<div>
+   <div>
+     <ul>
+       <li>
+         <a routerLink='/login' routerLinkActive='active'>Sig-in</a>
+       </li>
+       <li>
+        <a routerLink='/signup' routerLinkActive='active'>Sig-up</a>
+      </li>
+     </ul>
+     <div>
+        <router-outlet></router-outlet>
+     </div>
+   </div>
+</div>
