--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -1,1 +1,40 @@
-<p>sign-up works!</p>
+<div>
+  <h1>SIGN UP</h1>
+</div>
+<div>
+  <div>
+    <form action="">
+      <div>
+        <div class="input-field col s6">
+          <input class="validate" type="text" name="UserName" >
+          <label data-error="Required field!">UserName</label>
+        </div>
+        <div class="input-field col s6">
+          <input class="validate" type="password" name="Password">
+          <label>Password</label>
+        </div>
+      </div>
+      <div>
+        <div class="input-field col s12">
+          <input class="validate" type="text" name="Email">
+          <label data-error="Invalid email!">Email</label>
+        </div>
+      </div>
+      <div>
+        <div class="input-field col s6">
+          <input type="text" name="FirstName">
+          <label>First Name</label>
+        </div>
+        <div class="input-field col s6">
+          <input type="text" name="LastName">
+          <label>Last Name</label>
+        </div>
+      </div>
+      <div>
+        <div class="input-field col s12">
+          <button class="btn-large btn-submit" type="submit">Submit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
